<resources>
    <string name="app_name">House Rent</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="sign_up_here"><u>Sign up here</u></string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>

    <array name="roles">
        <item>Owner</item>
        <item>Renter</item>
    </array>

    <array name="period">
        <item>Monthly</item>
        <item>Yearly</item>
    </array>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile Name</string>
    <string name="nav_header_subtitle">email.address@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About Developer</string>
    <string name="bdt_sign">৳</string>
</resources>
