<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimaryLight"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_paomedia_small_n_flat_house"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in here"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/username"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/username"
        android:drawableStart="@drawable/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"
        android:drawableStart="@drawable/password" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</LinearLayout>